# Database-Buffer-Manager

./: CMakeLists.txt
BufMgr/src/: buffer.cpp  buffer.h
BufMgr/src/exceptions/: bad_buffer_exception.cpp  bad_buffer_exception.h  hash_already_present_exception.h  hash_not_found_exception.h  insufficient_space_exception.h  invalid_record_exception.h  invalid_slot_exception.h  page_not_pinned_exception.h  slot_in_use_exception.h
SubramanianSeshadri_Sanjay_P2/: Doxyfile
SubramanianSeshadri_Sanjay_P2/docs/: annotated.html  bad__buffer__exception_8cpp_source.html  bad__buffer__exception_8h_source.html  badgerdb__exception_8cpp_source.html  badgerdb__exception_8h_source.html  buf_hash_tbl_8cpp_source.html  buf_hash_tbl_8h_source.html  buffer_8cpp_source.html  buffer_8h_source.html  buffer__exceeded__exception_8cpp_source.html  buffer__exceeded__exception_8h_source.html  classbadgerdb_1_1_bad_buffer_exception-members.html  classbadgerdb_1_1_bad_buffer_exception.html  classbadgerdb_1_1_badger_db_exception-members.html  classbadgerdb_1_1_badger_db_exception.html  classbadgerdb_1_1_buf_desc-members.html  classbadgerdb_1_1_buf_desc.html  classbadgerdb_1_1_buf_hash_tbl-members.html  classbadgerdb_1_1_buf_hash_tbl.html  classbadgerdb_1_1_buf_mgr-members.html  classbadgerdb_1_1_buf_mgr.html  classbadgerdb_1_1_buffer_exceeded_exception-members.html  classbadgerdb_1_1_buffer_exceeded_exception.html  classbadgerdb_1_1_file-members.html  classbadgerdb_1_1_file.html  classbadgerdb_1_1_file_exists_exception-members.html  classbadgerdb_1_1_file_exists_exception.html  classbadgerdb_1_1_file_iterator-members.html  classbadgerdb_1_1_file_iterator.html  classbadgerdb_1_1_file_not_found_exception-members.html  classbadgerdb_1_1_file_not_found_exception.html  classbadgerdb_1_1_file_open_exception-members.html  classbadgerdb_1_1_file_open_exception.html  classbadgerdb_1_1_hash_already_present_exception-members.html  classbadgerdb_1_1_hash_already_present_exception.html  classbadgerdb_1_1_hash_not_found_exception-members.html  classbadgerdb_1_1_hash_not_found_exception.html  classbadgerdb_1_1_hash_table_exception-members.html  classbadgerdb_1_1_hash_table_exception.html  classbadgerdb_1_1_insufficient_space_exception-members.html  (+96 more)
SubramanianSeshadri_Sanjay_P2/src/: Doxyfile.bak  buffer.cpp  buffer.h  main.cpp
SubramanianSeshadri_Sanjay_P2/src/exceptions/: invalid_page_exception.h  page_pinned_exception.h
SubramanianSeshadri_Sanjay_P2/src/latex/: annotated.tex  classbadgerdb_1_1BufDesc.tex  classbadgerdb_1_1BufHashTbl.tex  classbadgerdb_1_1BufMgr.tex  classbadgerdb_1_1File.tex  classbadgerdb_1_1FileIterator.tex  classbadgerdb_1_1Page.tex  classbadgerdb_1_1PageIterator.tex  index.tex  namespacebadgerdb.tex  namespaces.tex  refman.tex  structbadgerdb_1_1BufStats.tex  structbadgerdb_1_1FileHeader.tex  structbadgerdb_1_1PageHeader.tex  structbadgerdb_1_1PageSlot.tex  structbadgerdb_1_1RecordId.tex  structbadgerdb_1_1hashBucket.tex
