cmake_minimum_required(VERSION 3.6)
project(BadgerDB)

set(CMAKE_CXX_STANDARD 11)

set(SOURCE_FILES
    BufMgr/docs/search/all_61.html
    BufMgr/docs/search/all_61.js
    BufMgr/docs/search/all_62.html
    BufMgr/docs/search/all_62.js
    BufMgr/docs/search/all_63.html
    BufMgr/docs/search/all_63.js
    BufMgr/docs/search/all_64.html
    BufMgr/docs/search/all_64.js
    BufMgr/docs/search/all_65.html
    BufMgr/docs/search/all_65.js
    BufMgr/docs/search/all_66.html
    BufMgr/docs/search/all_66.js
    BufMgr/docs/search/all_67.html
    BufMgr/docs/search/all_67.js
    BufMgr/docs/search/all_68.html
    BufMgr/docs/search/all_68.js
    BufMgr/docs/search/all_69.html
    BufMgr/docs/search/all_69.js
    BufMgr/docs/search/all_6c.html
    BufMgr/docs/search/all_6c.js
    BufMgr/docs/search/all_6d.html
    BufMgr/docs/search/all_6d.js
    BufMgr/docs/search/all_6e.html
    BufMgr/docs/search/all_6e.js
    BufMgr/docs/search/all_6f.html
    BufMgr/docs/search/all_6f.js
    BufMgr/docs/search/all_70.html
    BufMgr/docs/search/all_70.js
    BufMgr/docs/search/all_72.html
    BufMgr/docs/search/all_72.js
    BufMgr/docs/search/all_73.html
    BufMgr/docs/search/all_73.js
    BufMgr/docs/search/all_75.html
    BufMgr/docs/search/all_75.js
    BufMgr/docs/search/all_76.html
    BufMgr/docs/search/all_76.js
    BufMgr/docs/search/all_77.html
    BufMgr/docs/search/all_77.js
    BufMgr/docs/search/all_7e.html
    BufMgr/docs/search/all_7e.js
    BufMgr/docs/search/classes_62.html
    BufMgr/docs/search/classes_62.js
    BufMgr/docs/search/classes_66.html
    BufMgr/docs/search/classes_66.js
    BufMgr/docs/search/classes_68.html
    BufMgr/docs/search/classes_68.js
    BufMgr/docs/search/classes_69.html
    BufMgr/docs/search/classes_69.js
    BufMgr/docs/search/classes_70.html
    BufMgr/docs/search/classes_70.js
    BufMgr/docs/search/classes_72.html
    BufMgr/docs/search/classes_72.js
    BufMgr/docs/search/classes_73.html
    BufMgr/docs/search/classes_73.js
    BufMgr/docs/search/close.png
    BufMgr/docs/search/functions_61.html
    BufMgr/docs/search/functions_61.js
    BufMgr/docs/search/functions_62.html
    BufMgr/docs/search/functions_62.js
    BufMgr/docs/search/functions_63.html
    BufMgr/docs/search/functions_63.js
    BufMgr/docs/search/functions_64.html
    BufMgr/docs/search/functions_64.js
    BufMgr/docs/search/functions_65.html
    BufMgr/docs/search/functions_65.js
    BufMgr/docs/search/functions_66.html
    BufMgr/docs/search/functions_66.js
    BufMgr/docs/search/functions_67.html
    BufMgr/docs/search/functions_67.js
    BufMgr/docs/search/functions_68.html
    BufMgr/docs/search/functions_68.js
    BufMgr/docs/search/functions_69.html
    BufMgr/docs/search/functions_69.js
    BufMgr/docs/search/functions_6c.html
    BufMgr/docs/search/functions_6c.js
    BufMgr/docs/search/functions_6d.html
    BufMgr/docs/search/functions_6d.js
    BufMgr/docs/search/functions_6e.html
    BufMgr/docs/search/functions_6e.js
    BufMgr/docs/search/functions_6f.html
    BufMgr/docs/search/functions_6f.js
    BufMgr/docs/search/functions_70.html
    BufMgr/docs/search/functions_70.js
    BufMgr/docs/search/functions_72.html
    BufMgr/docs/search/functions_72.js
    BufMgr/docs/search/functions_73.html
    BufMgr/docs/search/functions_73.js
    BufMgr/docs/search/functions_75.html
    BufMgr/docs/search/functions_75.js
    BufMgr/docs/search/functions_77.html
    BufMgr/docs/search/functions_77.js
    BufMgr/docs/search/functions_7e.html
    BufMgr/docs/search/functions_7e.js
    BufMgr/docs/search/mag_sel.png
    BufMgr/docs/search/namespaces_62.html
    BufMgr/docs/search/namespaces_62.js
    BufMgr/docs/search/nomatches.html
    BufMgr/docs/search/related_6f.html
    BufMgr/docs/search/related_6f.js
    BufMgr/docs/search/search.css
    BufMgr/docs/search/search.js
    BufMgr/docs/search/search_l.png
    BufMgr/docs/search/search_m.png
    BufMgr/docs/search/search_r.png
    BufMgr/docs/search/typedefs_66.html
    BufMgr/docs/search/typedefs_66.js
    BufMgr/docs/search/typedefs_70.html
    BufMgr/docs/search/typedefs_70.js
    BufMgr/docs/search/typedefs_73.html
    BufMgr/docs/search/typedefs_73.js
    BufMgr/docs/search/variables_61.html
    BufMgr/docs/search/variables_61.js
    BufMgr/docs/search/variables_62.html
    BufMgr/docs/search/variables_62.js
    BufMgr/docs/search/variables_63.html
    BufMgr/docs/search/variables_63.js
    BufMgr/docs/search/variables_64.html
    BufMgr/docs/search/variables_64.js
    BufMgr/docs/search/variables_66.html
    BufMgr/docs/search/variables_66.js
    BufMgr/docs/search/variables_69.html
    BufMgr/docs/search/variables_69.js
    BufMgr/docs/search/variables_6d.html
    BufMgr/docs/search/variables_6d.js
    BufMgr/docs/search/variables_6e.html
    BufMgr/docs/search/variables_6e.js
    BufMgr/docs/search/variables_70.html
    BufMgr/docs/search/variables_70.js
    BufMgr/docs/search/variables_72.html
    BufMgr/docs/search/variables_72.js
    BufMgr/docs/search/variables_73.html
    BufMgr/docs/search/variables_73.js
    BufMgr/docs/search/variables_75.html
    BufMgr/docs/search/variables_75.js
    BufMgr/docs/search/variables_76.html
    BufMgr/docs/search/variables_76.js
    BufMgr/docs/annotated.html
    BufMgr/docs/bad__buffer__exception_8cpp-source.html
    BufMgr/docs/bad__buffer__exception_8cpp_source.html
    BufMgr/docs/bad__buffer__exception_8h-source.html
    BufMgr/docs/bad__buffer__exception_8h_source.html
    BufMgr/docs/badgerdb__exception_8cpp-source.html
    BufMgr/docs/badgerdb__exception_8cpp_source.html
    BufMgr/docs/badgerdb__exception_8h-source.html
    BufMgr/docs/badgerdb__exception_8h_source.html
    BufMgr/docs/bc_s.png
    BufMgr/docs/buf_hash_tbl_8cpp-source.html
    BufMgr/docs/buf_hash_tbl_8cpp_source.html
    BufMgr/docs/buf_hash_tbl_8h-source.html
    BufMgr/docs/buf_hash_tbl_8h_source.html
    BufMgr/docs/buffer_8cpp-source.html
    BufMgr/docs/buffer_8cpp_source.html
    BufMgr/docs/buffer_8h-source.html
    BufMgr/docs/buffer_8h_source.html
    BufMgr/docs/buffer__exceeded__exception_8cpp-source.html
    BufMgr/docs/buffer__exceeded__exception_8cpp_source.html
    BufMgr/docs/buffer__exceeded__exception_8h-source.html
    BufMgr/docs/buffer__exceeded__exception_8h_source.html
    BufMgr/docs/classbadgerdb_1_1_bad_buffer_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_bad_buffer_exception.html
    BufMgr/docs/classbadgerdb_1_1_bad_buffer_exception.png
    BufMgr/docs/classbadgerdb_1_1_badger_db_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_badger_db_exception.html
    BufMgr/docs/classbadgerdb_1_1_badger_db_exception.png
    BufMgr/docs/classbadgerdb_1_1_buf_desc-members.html
    BufMgr/docs/classbadgerdb_1_1_buf_desc.html
    BufMgr/docs/classbadgerdb_1_1_buf_hash_tbl-members.html
    BufMgr/docs/classbadgerdb_1_1_buf_hash_tbl.html
    BufMgr/docs/classbadgerdb_1_1_buf_mgr-members.html
    BufMgr/docs/classbadgerdb_1_1_buf_mgr.html
    BufMgr/docs/classbadgerdb_1_1_buffer_exceeded_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_buffer_exceeded_exception.html
    BufMgr/docs/classbadgerdb_1_1_buffer_exceeded_exception.png
    BufMgr/docs/classbadgerdb_1_1_file-members.html
    BufMgr/docs/classbadgerdb_1_1_file.html
    BufMgr/docs/classbadgerdb_1_1_file_exists_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_file_exists_exception.html
    BufMgr/docs/classbadgerdb_1_1_file_exists_exception.png
    BufMgr/docs/classbadgerdb_1_1_file_iterator-members.html
    BufMgr/docs/classbadgerdb_1_1_file_iterator.html
    BufMgr/docs/classbadgerdb_1_1_file_not_found_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_file_not_found_exception.html
    BufMgr/docs/classbadgerdb_1_1_file_not_found_exception.png
    BufMgr/docs/classbadgerdb_1_1_file_open_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_file_open_exception.html
    BufMgr/docs/classbadgerdb_1_1_file_open_exception.png
    BufMgr/docs/classbadgerdb_1_1_hash_already_present_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_hash_already_present_exception.html
    BufMgr/docs/classbadgerdb_1_1_hash_already_present_exception.png
    BufMgr/docs/classbadgerdb_1_1_hash_not_found_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_hash_not_found_exception.html
    BufMgr/docs/classbadgerdb_1_1_hash_not_found_exception.png
    BufMgr/docs/classbadgerdb_1_1_hash_table_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_hash_table_exception.html
    BufMgr/docs/classbadgerdb_1_1_hash_table_exception.png
    BufMgr/docs/classbadgerdb_1_1_insufficient_space_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_insufficient_space_exception.html
    BufMgr/docs/classbadgerdb_1_1_insufficient_space_exception.png
    BufMgr/docs/classbadgerdb_1_1_invalid_page_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_invalid_page_exception.html
    BufMgr/docs/classbadgerdb_1_1_invalid_page_exception.png
    BufMgr/docs/classbadgerdb_1_1_invalid_record_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_invalid_record_exception.html
    BufMgr/docs/classbadgerdb_1_1_invalid_record_exception.png
    BufMgr/docs/classbadgerdb_1_1_invalid_slot_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_invalid_slot_exception.html
    BufMgr/docs/classbadgerdb_1_1_invalid_slot_exception.png
    BufMgr/docs/classbadgerdb_1_1_page-members.html
    BufMgr/docs/classbadgerdb_1_1_page.html
    BufMgr/docs/classbadgerdb_1_1_page_iterator-members.html
    BufMgr/docs/classbadgerdb_1_1_page_iterator.html
    BufMgr/docs/classbadgerdb_1_1_page_not_pinned_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_page_not_pinned_exception.html
    BufMgr/docs/classbadgerdb_1_1_page_not_pinned_exception.png
    BufMgr/docs/classbadgerdb_1_1_page_pinned_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_page_pinned_exception.html
    BufMgr/docs/classbadgerdb_1_1_page_pinned_exception.png
    BufMgr/docs/classbadgerdb_1_1_slot_in_use_exception-members.html
    BufMgr/docs/classbadgerdb_1_1_slot_in_use_exception.html
    BufMgr/docs/classbadgerdb_1_1_slot_in_use_exception.png
    BufMgr/docs/classes.html
    BufMgr/docs/closed.png
    BufMgr/docs/doxygen.css
    BufMgr/docs/doxygen.png
    BufMgr/docs/file_8cpp-source.html
    BufMgr/docs/file_8cpp_source.html
    BufMgr/docs/file_8h-source.html
    BufMgr/docs/file_8h_source.html
    BufMgr/docs/file__exists__exception_8cpp-source.html
    BufMgr/docs/file__exists__exception_8cpp_source.html
    BufMgr/docs/file__exists__exception_8h-source.html
    BufMgr/docs/file__exists__exception_8h_source.html
    BufMgr/docs/file__iterator_8h-source.html
    BufMgr/docs/file__iterator_8h_source.html
    BufMgr/docs/file__not__found__exception_8cpp-source.html
    BufMgr/docs/file__not__found__exception_8cpp_source.html
    BufMgr/docs/file__not__found__exception_8h-source.html
    BufMgr/docs/file__not__found__exception_8h_source.html
    BufMgr/docs/file__open__exception_8cpp-source.html
    BufMgr/docs/file__open__exception_8cpp_source.html
    BufMgr/docs/file__open__exception_8h-source.html
    BufMgr/docs/file__open__exception_8h_source.html
    BufMgr/docs/files.html
    BufMgr/docs/functions.html
    BufMgr/docs/functions_func.html
    BufMgr/docs/functions_rela.html
    BufMgr/docs/functions_vars.html
    BufMgr/docs/hash__already__present__exception_8cpp-source.html
    BufMgr/docs/hash__already__present__exception_8cpp_source.html
    BufMgr/docs/hash__already__present__exception_8h-source.html
    BufMgr/docs/hash__already__present__exception_8h_source.html
    BufMgr/docs/hash__not__found__exception_8cpp-source.html
    BufMgr/docs/hash__not__found__exception_8cpp_source.html
    BufMgr/docs/hash__not__found__exception_8h-source.html
    BufMgr/docs/hash__not__found__exception_8h_source.html
    BufMgr/docs/hash__table__exception_8cpp-source.html
    BufMgr/docs/hash__table__exception_8cpp_source.html
    BufMgr/docs/hash__table__exception_8h-source.html
    BufMgr/docs/hash__table__exception_8h_source.html
    BufMgr/docs/hierarchy.html
    BufMgr/docs/index.html
    BufMgr/docs/installdox
    BufMgr/docs/insufficient__space__exception_8cpp-source.html
    BufMgr/docs/insufficient__space__exception_8cpp_source.html
    BufMgr/docs/insufficient__space__exception_8h-source.html
    BufMgr/docs/insufficient__space__exception_8h_source.html
    BufMgr/docs/invalid__page__exception_8cpp-source.html
    BufMgr/docs/invalid__page__exception_8cpp_source.html
    BufMgr/docs/invalid__page__exception_8h-source.html
    BufMgr/docs/invalid__page__exception_8h_source.html
    BufMgr/docs/invalid__record__exception_8cpp-source.html
    BufMgr/docs/invalid__record__exception_8cpp_source.html
    BufMgr/docs/invalid__record__exception_8h-source.html
    BufMgr/docs/invalid__record__exception_8h_source.html
    BufMgr/docs/invalid__slot__exception_8cpp-source.html
    BufMgr/docs/invalid__slot__exception_8cpp_source.html
    BufMgr/docs/invalid__slot__exception_8h-source.html
    BufMgr/docs/invalid__slot__exception_8h_source.html
    BufMgr/docs/jquery.js
    BufMgr/docs/main_8cpp-source.html
    BufMgr/docs/main_8cpp_source.html
    BufMgr/docs/main_8hpp-source.html
    BufMgr/docs/main_8hpp_source.html
    BufMgr/docs/namespacebadgerdb.html
    BufMgr/docs/namespacemembers.html
    BufMgr/docs/namespacemembers_type.html
    BufMgr/docs/namespaces.html
    BufMgr/docs/nav_f.png
    BufMgr/docs/nav_h.png
    BufMgr/docs/open.png
    BufMgr/docs/page_8cpp-source.html
    BufMgr/docs/page_8cpp_source.html
    BufMgr/docs/page_8h-source.html
    BufMgr/docs/page_8h_source.html
    BufMgr/docs/page__iterator_8h-source.html
    BufMgr/docs/page__iterator_8h_source.html
    BufMgr/docs/page__not__pinned__exception_8cpp-source.html
    BufMgr/docs/page__not__pinned__exception_8cpp_source.html
    BufMgr/docs/page__not__pinned__exception_8h-source.html
    BufMgr/docs/page__not__pinned__exception_8h_source.html
    BufMgr/docs/page__pinned__exception_8cpp-source.html
    BufMgr/docs/page__pinned__exception_8cpp_source.html
    BufMgr/docs/page__pinned__exception_8h-source.html
    BufMgr/docs/page__pinned__exception_8h_source.html
    BufMgr/docs/search.idx
    BufMgr/docs/search.php
    BufMgr/docs/slot__in__use__exception_8cpp-source.html
    BufMgr/docs/slot__in__use__exception_8cpp_source.html
    BufMgr/docs/slot__in__use__exception_8h-source.html
    BufMgr/docs/slot__in__use__exception_8h_source.html
    BufMgr/docs/structbadgerdb_1_1_buf_stats-members.html
    BufMgr/docs/structbadgerdb_1_1_buf_stats.html
    BufMgr/docs/structbadgerdb_1_1_file_header-members.html
    BufMgr/docs/structbadgerdb_1_1_file_header.html
    BufMgr/docs/structbadgerdb_1_1_page_header-members.html
    BufMgr/docs/structbadgerdb_1_1_page_header.html
    BufMgr/docs/structbadgerdb_1_1_page_slot-members.html
    BufMgr/docs/structbadgerdb_1_1_page_slot.html
    BufMgr/docs/structbadgerdb_1_1_record_id-members.html
    BufMgr/docs/structbadgerdb_1_1_record_id.html
    BufMgr/docs/structbadgerdb_1_1hash_bucket-members.html
    BufMgr/docs/structbadgerdb_1_1hash_bucket.html
    BufMgr/docs/tab_a.png
    BufMgr/docs/tab_b.gif
    BufMgr/docs/tab_b.png
    BufMgr/docs/tab_h.png
    BufMgr/docs/tab_l.gif
    BufMgr/docs/tab_r.gif
    BufMgr/docs/tab_s.png
    BufMgr/docs/tabs.css
    BufMgr/docs/types_8h-source.html
    BufMgr/docs/types_8h_source.html
    BufMgr/src/exceptions/bad_buffer_exception.cpp
    BufMgr/src/exceptions/bad_buffer_exception.h
    BufMgr/src/exceptions/badgerdb_exception.cpp
    BufMgr/src/exceptions/badgerdb_exception.h
    BufMgr/src/exceptions/buffer_exceeded_exception.cpp
    BufMgr/src/exceptions/buffer_exceeded_exception.h
    BufMgr/src/exceptions/file_exists_exception.cpp
    BufMgr/src/exceptions/file_exists_exception.h
    BufMgr/src/exceptions/file_not_found_exception.cpp
    BufMgr/src/exceptions/file_not_found_exception.h
    BufMgr/src/exceptions/file_open_exception.cpp
    BufMgr/src/exceptions/file_open_exception.h
    BufMgr/src/exceptions/hash_already_present_exception.cpp
    BufMgr/src/exceptions/hash_already_present_exception.h
    BufMgr/src/exceptions/hash_not_found_exception.cpp
    BufMgr/src/exceptions/hash_not_found_exception.h
    BufMgr/src/exceptions/hash_table_exception.cpp
    BufMgr/src/exceptions/hash_table_exception.h
    BufMgr/src/exceptions/insufficient_space_exception.cpp
    BufMgr/src/exceptions/insufficient_space_exception.h
    BufMgr/src/exceptions/invalid_page_exception.cpp
    BufMgr/src/exceptions/invalid_page_exception.h
    BufMgr/src/exceptions/invalid_record_exception.cpp
    BufMgr/src/exceptions/invalid_record_exception.h
    BufMgr/src/exceptions/invalid_slot_exception.cpp
    BufMgr/src/exceptions/invalid_slot_exception.h
    BufMgr/src/exceptions/page_not_pinned_exception.cpp
    BufMgr/src/exceptions/page_not_pinned_exception.h
    BufMgr/src/exceptions/page_pinned_exception.cpp
    BufMgr/src/exceptions/page_pinned_exception.h
    BufMgr/src/exceptions/slot_in_use_exception.cpp
    BufMgr/src/exceptions/slot_in_use_exception.h
    BufMgr/src/buffer.cpp
    BufMgr/src/buffer.h
    BufMgr/src/bufHashTbl.cpp
    BufMgr/src/bufHashTbl.h
    BufMgr/src/file.cpp
    BufMgr/src/file.h
    BufMgr/src/file_iterator.h
    BufMgr/src/main.cpp
    BufMgr/src/main.hpp
    BufMgr/src/page.cpp
    BufMgr/src/page.h
    BufMgr/src/page_iterator.h
    BufMgr/src/types.h
    BufMgr/Doxyfile
    BufMgr/Makefile
    BufMgr/README)

add_executable(BadgerDB ${SOURCE_FILES})